Fix back to top button background and border on smaller screens

--- a/_sass/_md.scss
+++ b/_sass/_md.scss
@@ -79,6 +79,8 @@
     font-size: 40px;
     color: $pinkish-grey;
     z-index: 1000;
+    border: none;
+    background-color: transparent;
   }
 
   .first-container {
