--- a/_sass/_sm.scss
+++ b/_sass/_sm.scss
@@ -111,6 +111,8 @@
     font-size: 40px;
     color: $pinkish-grey;
     z-index: 1000;
+    border: none;
+    background-color: transparent;
   }
 
   .first-container {
