--- a/_sass/_xs.scss
+++ b/_sass/_xs.scss
@@ -116,6 +116,8 @@
     font-size: 40px;
     color: $moo-xoo-green;
     z-index: 1000;
+    border: none;
+    background-color: transparent;
   }
 
   .first-container {
